# allwin

./: .gitignore
backend/: .env.example  .gitignore  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/ai/: __init__.py  anomaly_detector.py  compare_builder.py  context_builder.py  document_summarizer.py  openai_provider.py  provider.py  radar_builder.py  rate_limiter.py
backend/app/api/: ai_chat.py  ai_compare.py  ai_documentos.py  ai_radar.py  binance_trade.py  cripto.py  cripto_backtest.py  cripto_cerebro.py  cripto_comparativo.py  cripto_daytrade.py  cripto_futures.py  cripto_ia_analisa.py  cripto_motor.py  cripto_sinais.py  cripto_wallet.py  ranking.py  routes.py  rs_analisa.py  simulador.py
backend/app/api/v2/: router.py
backend/app/calculadora/: formulas.py  runner.py
backend/app/cripto/: auto_trade_config.py  auto_trade_worker.py  backtest_ai.py  backtest_engine.py  backtest_profiles.py  backtest_store.py  bot_worker.py  cerebro_monitor_worker.py  coingecko_provider.py  comparativo_engine.py  daytrade_engine.py  extended_indicators.py  futures_engine.py  indicators.py  mb_provider.py  motor_decisao.py  pattern_engine.py  score_engine.py  signal_engine.py
backend/app/db/: __init__.py  mysql.py  session.py
backend/app/db/models/: __init__.py  cotacao.py  demonstrativo.py  (+2 more)
backend/app/etl/: base.py
backend/app/financials/: indicators.py  models.py  score.py
backend/app/valuation/: engine.py  models.py
backend/tests/: test_ai_chat.py  test_ai_compare.py  test_ai_documentos.py  test_ai_radar.py  test_context_builder.py
(+92 files in other folders)
